# bevy-demo

./: Cargo.toml  Makefile
src/: main.rs  schedule.rs
src/engine/: entry.rs  mod.rs  scene.rs
src/game/: colliders.rs  entry.rs  mod.rs  player.rs  scene.rs  spatial.rs  tile.rs
src/game/actor/: bench.rs  camera.rs  health.rs  kinematic.rs  mod.rs  player.rs  projectile.rs
src/game/math/: aabb.rs  draw.rs  glam.rs  mod.rs
src/game/tile/: collider.rs  data.rs  kinematic.rs  material.rs  mod.rs  render.rs
src/util/: arena.rs  deferred.rs  delegate.rs  ecs.rs  entity.rs  lock.rs  mod.rs  schedule.rs
