[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
autoken = { git = "https://github.com/Radbuglet/autoken.git", rev = "f02c8390ebd310e3f5679ffec2a31a1e6a217cbc" }
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
cbit = "0.1.0"
color-backtrace = "0.6.1"
env_logger = "0.11.3"
generational-arena = "0.2.9"
log = "0.4.21"
macroquad = "0.4.5"
rustc-hash = "1.1.0"
scopeguard = "1.2.0"
smallvec = "1.13.2"

[profile.release]
lto = "thin"
